[gd_scene load_steps=16 format=3 uid="uid://dvo4x7wb5162y"]

[ext_resource type="Script" uid="uid://clruq8fwps0b8" path="res://scenes/ui/game_ui.gd" id="1_w46tp"]
[ext_resource type="LabelSettings" uid="uid://c57ud2wgpb52n" path="res://scenes/ui/label_score75-30.tres" id="2_7hrjk"]
[ext_resource type="Texture2D" uid="uid://dhcfq1juug1ru" path="res://assets/sprites/UI/textGetReady.png" id="3_pylni"]
[ext_resource type="Texture2D" uid="uid://c42nhwabeqalv" path="res://assets/sprites/UI/tapTick.png" id="4_3vkek"]
[ext_resource type="Texture2D" uid="uid://i226rtrqfqpn" path="res://assets/sprites/UI/textGameOver.png" id="5_qrkc0"]
[ext_resource type="Texture2D" uid="uid://bs0v2bu31y61k" path="res://assets/sprites/UI/UIbg.png" id="6_yvtb5"]
[ext_resource type="LabelSettings" uid="uid://ds0vku1d2nhud" path="res://scenes/ui/label_score32-16-yellow.tres" id="7_fftnl"]
[ext_resource type="Texture2D" uid="uid://duxaechd3165o" path="res://assets/sprites/UI/buttonLarge.png" id="7_k7elv"]
[ext_resource type="Texture2D" uid="uid://b2akkjgeahful" path="res://assets/sprites/UI/medalBronze.png" id="8_bxde6"]
[ext_resource type="FontFile" uid="uid://due6jbyye53ld" path="res://assets/fonts/font_score.ttf" id="9_opxtl"]

[sub_resource type="LabelSettings" id="LabelSettings_crnce"]
font = ExtResource("9_opxtl")
font_size = 75
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x0n6o"]
font = ExtResource("9_opxtl")
font_size = 50
outline_size = 30
outline_color = Color(0.44, 0.249333, 0, 1)

[sub_resource type="Animation" id="Animation_3vkek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/start_menu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pylni"]
resource_name = "play"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/start_menu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xh48a"]
_data = {
&"RESET": SubResource("Animation_3vkek"),
&"play": SubResource("Animation_pylni")
}

[node name="game_ui" type="CanvasLayer"]
script = ExtResource("1_w46tp")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 36
theme_override_constants/margin_top = 36
theme_override_constants/margin_right = 36
theme_override_constants/margin_bottom = 36

[node name="score_label" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0"
label_settings = ExtResource("2_7hrjk")

[node name="start_menu" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/start_menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = -29.0
offset_right = 200.0
offset_bottom = 44.0
grow_horizontal = 2
texture = ExtResource("3_pylni")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/start_menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 15.5
offset_top = 141.0
offset_right = 74.5
offset_bottom = 200.0
grow_horizontal = 2
texture = ExtResource("4_3vkek")

[node name="game_over_menu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/game_over_menu"]
layout_mode = 2
texture = ExtResource("5_qrkc0")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/game_over_menu"]
layout_mode = 2
texture = ExtResource("6_yvtb5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/game_over_menu/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Medal"
label_settings = ExtResource("7_fftnl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="medal" type="TextureRect" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_bxde6")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "score"
label_settings = ExtResource("7_fftnl")
horizontal_alignment = 1

[node name="current_score" type="Label" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_crnce")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "best"
label_settings = ExtResource("7_fftnl")
horizontal_alignment = 1

[node name="high_score" type="Label" parent="MarginContainer/game_over_menu/TextureRect2/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_crnce")
horizontal_alignment = 1

[node name="play_button" type="TextureButton" parent="MarginContainer/game_over_menu"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_k7elv")

[node name="Label" type="Label" parent="MarginContainer/game_over_menu/play_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -25.5
offset_right = 28.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "OK"
label_settings = SubResource("LabelSettings_x0n6o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xh48a")
}
autoplay = "play"

[connection signal="pressed" from="MarginContainer/game_over_menu/play_button" to="." method="_on_play_button_pressed"]
